# stock-monitor-public

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: DIP_ZONE.md  PROJECT.md  RISK_FILTER.md
stock-monitor/: app.py  debug_tool.py  dip_zone.py  futu_quote_provider.py  holding_monitor.py  macro_cycle_dashboard.py  main.py  market_sentiment.py  momentum_scorer.py  momentum_view.py  notifier.py  position_manager.py  position_state.py  risk_scoring.py  scheduler.py  scorer.py  state_manager.py  strategy.py  utils.py  ytd_performance.py
