[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pytz>=2026.1.post1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "yfinance>=1.2.0",
]
